oasis-macros/tests/ui/no_contract_derive.stderr
error: Contract definition must contain a #[derive(Contract)] struct.
 --> $DIR/no_contract_derive.rs:2:1
  |
2 | #[oasis_std::contract]
  | ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

